# ChangeLog for app-admin/xstow
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/xstow/ChangeLog,v 1.11 2011/12/10 15:14:22 maksbotan Exp $

*xstow-1.0.0 (10 Dec 2011)

  10 Dec 2011; Maxim Koltsov <maksbotan@gentoo.org> +files/99xstow,
  +xstow-1.0.0.ebuild, metadata.xml:
  Bumped to 1.0.0, added new maintainer. Bug 273346 is fixed. Thanks to Erik
  Falor.

  28 Apr 2008; Samuli Suominen <drac@gentoo.org>
  +files/xstow-0.5.1-gcc43.patch, xstow-0.5.1.ebuild:
  Fix building with GCC 4.3 wrt #219633, thanks to Peter Alfredsen. Also fix
  USE ncurses handling and pass --without-curses instead of
  --without-ncurses to configure.

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  05 Jan 2007; Danny van Dyk <kugelfang@gentoo.org> -xstow-0.4.6.ebuild:
  QA: Removed unused versions.

  01 Aug 2006; Joshua Jackson <tsunam@gentoo.org> xstow-0.5.1.ebuild:
  Stable x86; bug #142343

  27 Jun 2005; David Holm <dholm@gentoo.org> xstow-0.5.1.ebuild:
  Added to ~ppc.

  25 Jun 2005; David Holm <dholm@gentoo.org> xstow-0.4.6.ebuild:
  Added to ~ppc.

*xstow-0.5.1 (24 Jun 2005)

  24 Jun 2005; Alastair Tse <liquidx@gentoo.org> +xstow-0.5.1.ebuild:
  version bump (#46026)

*xstow-0.4.6 (03 Apr 2003)

  03 Apr 2003; Alastair Tse <liquidx@gentoo.org> xstow-0.4.6.ebuild,
  files/xstow-0.4.6-configure-ncurses.diff:
  intial ebuild. thanks to Andrew Mahone (#16783)
