@@ -3,6 +3,7 @@ AUX xstow-0.5.1-gcc43.patch 2015 RMD160 0b95af42897df38578eff6bea7def830d6673324
 DIST xstow-0.5.1.tar.gz 138091 RMD160 961205ef5625945daf746c093621fdaccbcf287f SHA1 79a7175b47b09ce615067850eb4d72e2ac2f75e5 SHA256 7543a46dd61a352647c74d60080d8a2c50db0c0b178316b6a367d7e60e2b38cf
 DIST xstow-1.0.0.tar.bz2 153206 RMD160 cfb4200e580f4cb61b3ad4b1fc7a4655f477e237 SHA1 e4e68fbf05150067d82ce526cb784c5c91107ec9 SHA256 0109f10fb25a474803ec357a38c17d806dd9a21eac39b21d79b48c2af571c0fe
 EBUILD xstow-0.5.1.ebuild 839 RMD160 31ca5ca12ffa7294f45f220b026c3e96494b2081 SHA1 797baaeb8966f4cf7d9513d1adfd9ff9c1b03466 SHA256 3a5e9551451753a5ac489d8858f6d0ff3b3e6047a2187e5f6fb9f1fa5672f426
+EBUILD xstow-1.0.0-r1.ebuild 1364 RMD160 55ee42c42ef73b63b07776efae18f0767cd25cf3 SHA1 61f91317e7d8f9c59c797001df3003e9f9af674b SHA256 bc2735d1645b1ebd096c67cad78e79f397f9a2e6a387d24e183f490f903ad95d
 EBUILD xstow-1.0.0.ebuild 1364 RMD160 fbf97c7c15dbdc1951d53272d0195b3455f6b84f SHA1 98a67cbf8a00ee143d0baec6a9091f0e48251cf1 SHA256 14aa781d5c9efe482fad74769ae73f31fc7bce84a6bfc4cf0de8b6ad7ff1106e
-MISC ChangeLog 1477 RMD160 b2791cb508175607f5ff3b271ae4baf783c25553 SHA1 b3b1c47b1db27378eb0d1883f82a20f325bf9ad4 SHA256 1985e24e9477121a79d2ff445872cdc5168a22dfc84fc8dc104ca9b6eadeb5f8
+MISC ChangeLog 1663 RMD160 a997497a524972aa151e479b160c5522c07bd4f0 SHA1 99998a3393702c4b155ce7c13a8a64588ee445c3 SHA256 8396c64f46b8ae1fefd2aa033cf5047f8a662819b492a20dad83b82c80590a60
 MISC metadata.xml 455 RMD160 18c10a251b9677b025ff72e848ea6260ac3c445c SHA1 e2ac13e8c116885c240c189ba4c2957cb102d520 SHA256 701b5ef876bdbda4a537ebfd08a88d1a520ddc18450e98c64dade05eed4ce6b0
