@@ -1,6 +1,11 @@
 # ChangeLog for app-admin/xstow
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/xstow/ChangeLog,v 1.11 2011/12/10 15:14:22 maksbotan Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/xstow/ChangeLog,v 1.12 2011/12/19 17:35:58 maksbotan Exp $
+
+*xstow-1.0.0-r1 (19 Dec 2011)
+
+  19 Dec 2011; Maxim Koltsov <maksbotan@gentoo.org> +xstow-1.0.0-r1.ebuild:
+  Revision bump. Clean ebuild a little and fix messages. Thanks to Erik Falor
 
 *xstow-1.0.0 (10 Dec 2011)
 
